# auto_ria_scrap

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  req.txt
src/: database.py  fetcher.py  scraper.py
src/constants/: web.py
src/database/: connection.py  insert.py
src/parser/: auto_parser.py  compile_data_as_dict.py  generic.py  get_phones.py  urls_parser.py
src/scraper/: start_fetching.py
